--- a/sass/modules/_breakpoints.scss
+++ b/sass/modules/_breakpoints.scss
@@ -1,4 +1,4 @@
 // breakpoints
-$wide-screens: 1200px;
+$wide-screens: 1140px;
 $medium-screens: 800px;
-$small-screnn: 500px;
+$small-screens: 500px;
