--- a/sass/modules/_mixin.scss
+++ b/sass/modules/_mixin.scss
@@ -1,8 +1,10 @@
 // mixins
-@mixin title-style($color, $background: #eee) {
-  // margin: 0 0 20px 0;
-  font-family: $font-light;
-  font-size: 1.25em; // 20/16
-  color: $color;
-  background: $background;
-} 
+
+// clearfix mixin
+@mixin cf {
+  &:after {
+    content: "";
+    display: block;
+    clear: both;
+  }
+}
