--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -1,27 +1,27 @@
 /* Use Compass */
 @import "compass";
 
-/* Font weights */
-$light: 100;
-$regular: 400;
-$bold: 600;
+// /* Font weights */
+// $light: 100;
+// $regular: 400;
+// $bold: 600;
 
-/* Base Font */
-$base-font-family: sans-serif;
-$base-font-weight: $regular;
-$base-font-size: 16px;
-$base-line-height: 1.4;
+// /* Base Font */
+// $base-font-family: sans-serif;
+// $base-font-weight: $regular;
+// $base-font-size: 16px;
+// $base-line-height: 1.4;
 
-/* Fixed Font */
-$fixed-font-family: monospace;
-$fixed-font-size: 85%;
-$fixed-line-height: $base-line-height;
+// /* Fixed Font */
+// $fixed-font-family: monospace;
+// $fixed-font-size: 85%;
+// $fixed-line-height: $base-line-height;
 
-/* Headings */
-$header-font-weight: $bold;
+// // /* Headings */
+// $header-font-weight: $bold;
 
 @import "modules/_colors.scss";
 @import "modules/_breakpoints.scss";
 @import "modules/_fonts.scss";
 @import "modules/_mixin_prefixes.scss";
-// @import "modules/_mixin.scss";
+@import "modules/_mixin.scss";
