--- a/sass/partials/_typography.scss
+++ b/sass/partials/_typography.scss
@@ -1,3 +1,3 @@
 // typography
 $font-sans: "Effra", Verdana, Arial, sans-serif;
-$font-light: "Effra Light", Verdans, Arial, sans-serif;
+$font-light: "Effra Light", Verdana, Arial, sans-serif;
