--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -3,110 +3,93 @@
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
  
-// Base
-@import "partials/_base.scss";
 
-// Partials
+/* Base */
 @import "compass/reset";
-@import "partials/_typography.scss";
-@import "partials/_grids.scss";
+// @import "partials/_base.scss";
 
-// grids
-.wrap {
-  @include container;
+/* Mixin */
+@import "modules/_mixin.scss";
+@import "modules/_breakpoints.scss";
+
+/* Partials */
+@import "partials/_grids.scss";
+// @import "partials/_typography.scss";
+
+/* Styling */
+h2 {
+  padding: 1rem 0;
+  text-align: center;
+  color: #555;
+}
+
+ul, ol {
+  margin: 0;
+  padding: 0;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+.site-header, .site-footer {
+  background: rgba(234, 159, 195, 0.8);
+}
+
+.site-header {
+  a {
+    color: #555;
+    text-decoration: none;
+  }
+}
+
+.logo {
+  float: left;
+  line-height: 2rem;
+  font-size: 1.5rem;
+}
+
+nav {
+  float: right;
+
+  li {
+    list-style: none;
+    float: left;
+    margin-left: 1em;
+    line-height: 2rem;
+  }
 }
 
 .content {
-  @include span(8);
+  margin-top: 5vh;
+  padding-bottom: 1rem;
+  background: rgba(113, 218, 218, 0.8);
 }
 
 .sidebar {
-  @include span(4 last);
-}
+  margin-top: 5vh;
+  padding-bottom: 1rem;
+  background: rgba(250, 231, 179, 0.8);
 
-.social {
-  padding: gutter();
-  @include clearfix;
+  li {
+    list-style: none;
 
-  .social__List-item {
-    @include span(1 of 10);
-    &:last-child {
-      @include last;
+    a {
+      color: #666;
+      padding-left: 1rem;
+      line-height: 2;
+      text-decoration: none;
     }
   }
 }
 
-// styling
-body {
-  padding: 0.8%;
-  font: {
-    size: 100%;
-    family: $font-sans;
-  }
-  color: $main-color;
+.widget {
+  background: rgba(240, 150, 113, 0.8);
 }
 
-header[role="banner"] {
-  
-  h1 {
-    padding: 15px 0 18px 0;
-    margin: 0 auto;
-    color: $light-color;
-    font: {
-      size: 2.5em;
-      family: $font-light;
-    }
-
-    line-height: 1;
-    text: {
-      align: center;
-    }
-  }
-
-  background: {
-    color: $brand-color;
-  }
+.site-footer {
+  margin-top: 5vh;
 }
 
-section .main {
-  float: left;
-  // width: span(1);
-}
 
-section .second {
-  float: left;
-  // width: span(4);
-}
-
-section h2 {
-  // @include title-style($main-color, #fff);
-  font-size: 1.5em;
-}
-
-section h3 {
-  // @include title-style($medium-color, #fff);
-}
-
-section p {
-  margin: 0 0 20px 0;
-  line-height: 1.4;
-}
-
-// link style
-a {
-  text-decoration: none;
-  border-bottom: 1px solid $light-color;
-  color: $accent-color;
-  &:hover {
-    color: $accent-80-color;
-    }
-  &:active {
-    color: $brand-80-color;
-  }
-  &.alert {
-    color: red;
-  }
-  &.success {
-    color: green;
-  }
-}
