--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -72,7 +72,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 /* Partials */
 /* Changing Susy default global settings */
 /* Makes border-box properties */
-/* line 14, ../../../.rbenv/versions/2.2.0-dev/lib/ruby/gems/2.2.0/gems/susy-2.1.3/sass/susy/language/susy/_box-sizing.scss */
+/* line 21, ../../../.rbenv/versions/2.2.0-dev/lib/ruby/gems/2.2.0/gems/susy-2.2.1/sass/susy/language/susy/_box-sizing.scss */
 *, *:before, *:after {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
@@ -91,7 +91,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   background-clip: content-box;
   background-position: left top;
 }
-/* line 12, ../../../.rbenv/versions/2.2.0-dev/lib/ruby/gems/2.2.0/gems/susy-2.1.3/sass/susy/output/support/_clearfix.scss */
+/* line 12, ../../../.rbenv/versions/2.2.0-dev/lib/ruby/gems/2.2.0/gems/susy-2.2.1/sass/susy/output/support/_clearfix.scss */
 .wrap:after {
   content: " ";
   display: block;
@@ -106,7 +106,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 }
 /* line 5, ../sass/modules/_mixin.scss */
 .content:after {
-  content: "";
+  content: " ";
   display: block;
   clear: both;
 }
@@ -119,40 +119,33 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 }
 /* line 5, ../sass/modules/_mixin.scss */
 .sidebar:after {
-  content: "";
+  content: " ";
   display: block;
   clear: both;
 }
 
 /* line 35, ../sass/partials/_grids.scss */
-.gallery {
-  width: span 10 of 12;
-  margin-left: auto;
-  margin-right: auto;
-}
-/* line 5, ../sass/modules/_mixin.scss */
-.gallery:after {
-  content: "";
-  display: block;
-  clear: both;
-}
-
-/* line 42, ../sass/partials/_grids.scss */
 .gallery__item {
   list-style: none;
   width: 18.36735%;
   float: left;
   margin-right: 2.04082%;
 }
-/* line 45, ../sass/partials/_grids.scss */
+/* line 38, ../sass/partials/_grids.scss */
 .gallery__item:nth-child(5n) {
   float: right;
   margin-right: 0;
 }
 
+/* line 49, ../sass/partials/_grids.scss */
+.gallery {
+  padding-left: 8.47458%;
+  padding-right: 8.47458%;
+}
+
 /* line 5, ../sass/modules/_mixin.scss */
 .site-footer:after {
-  content: "";
+  content: " ";
   display: block;
   clear: both;
 }
